# storytunes

./: .env.example  .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.github/workflows/: ci.yml
apps/api/: .env.example  Dockerfile  README.md  alembic.ini  package.json  pyproject.toml
apps/api/app/: main.py
apps/api/app/api/: deps.py
apps/api/app/api/routes/: account.py  admin.py  artists.py  files.py  health.py  internal.py  orders.py  samples.py  share.py
apps/api/app/core/: config.py  security.py
apps/api/app/db/: base.py  migrate_filter.py  session.py
apps/api/app/models/: __init__.py  auth.py  business.py
apps/api/app/schemas/: artist.py  order.py  production.py  sample.py
apps/api/app/services/: ai.py  email.py  email_templates.py  moderation.py  pricing.py  storage.py
apps/api/app/services/music/: __init__.py  ace.py  elevenlabs.py  lyria.py  replicate.py  stub.py  suno.py
apps/api/app/workers/: celery_app.py  tasks.py
apps/api/migrations/: env.py
apps/api/migrations/versions/: aaedea054271_init_business_tables.py
apps/api/scripts/: cleanup_test_data.py  flow_test.py  seed.py  seed_demo_orders.py
apps/api/tests/: test_health.py  test_moderation.py  test_pricing.py
apps/web/: .cta.json  .env.example  README.md  package.json  tsconfig.json  vite.config.ts
apps/web/drizzle/: 0000_closed_thunderbolt.sql
apps/web/public/: manifest.json
apps/web/src/: routeTree.gen.ts  styles.css
apps/web/src/db/: schema.ts
docs/: ARCHITECTURE.md  ASSETS.md  PDD.md  PRODUCTION_READINESS.md
(+62 files in other folders)
