[project]
name = "storytunes-api"
version = "0.1.0"
description = "StoryTunes business API (FastAPI)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.118",
    "uvicorn[standard]>=0.34",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14",
    "psycopg[binary]>=3.2",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "celery[redis]>=5.4",
    "redis>=5.2",
    "stripe>=11.3",
    "resend>=2.6",
    "boto3>=1.35",
    "httpx>=0.28",
    "google-genai>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["migrations/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
